# praktik.2p2._katunov

./: .coveragerc  .gitignore  README.md  forms_db.json  pyproject.toml
src/: app.py  initialize_db.py
src/tests/: test_cmd_line.py  test_date.py  test_db.py  test_domain.py  test_email.py  test_integration.py  test_phone.py  test_type_validate.py
